--- a/src/app/entries/entry/entry-comment-form.component.html
+++ b/src/app/entries/entry/entry-comment-form.component.html
@@ -16,7 +16,8 @@
         name="comment" [(ngModel)]="comment" 
         required minLength="3" #commentField="ngModel"
         [ngStyle]="{'outline-color': commentField.dirty && commentField.valid ? 'green' : undefined}"
-        ></textarea>
+        >
+    </textarea>
     <div class="alert alert-danger" *ngIf="(commentForm.submitted || commentField.touched) && commentField.errors">
       <div [hidden]="!commentField.errors.required">Comment is required</div>
       <div [hidden]="!commentField.errors.minLength">Comment must be a minimum of 3 characters</div>
